@@ -22,7 +22,7 @@ public enum EngineCommands implements Command {
     private EngineCommands(final String text, final String desc, final char keyChar) {
         this.text = text;
         this.desc = desc;
-        this.mnemonic = new Integer(keyChar);
+        this.mnemonic = Integer.valueOf(keyChar);
         this.accelerator = KeyStroke.getKeyStroke(keyChar);
         this.iconFilename = name().toLowerCase() + ".png";
     }
